Fix preloader, change link to home page, fix grid

--- a/sivenkov.org/main.html
+++ b/sivenkov.org/main.html
@@ -30,13 +30,13 @@
 </svg>
       </div>
     </section>
+    <!--Header BEGIN-->
     <header class="header">
-      <div class="container">
-        <div class="header__content"><a class="responsive-image header__wrap-logo" href="/"><img class="header__logo-img" src="img/logo-dark.svg" alt=""></a><span class="header-menu-btn header-menu-btn_desktop text-bold">Menu</span><span class="header-menu-btn header-menu-btn_mobile"><span class="header-menu-btn__line header-menu-btn__line_first"></span><span class="header-menu-btn__line header-menu-btn__line_second"></span><span class="header-menu-btn__line header-menu-btn__line_third"></span></span></div>
-      </div>
+      <div class="header__content"><a class="responsive-image header__wrap-logo" href="/"><img class="header__logo-img" src="img/logo-dark.svg" alt=""></a><span class="header-menu-btn header-menu-btn_desktop text-bold">Menu</span><span class="header-menu-btn header-menu-btn_mobile"><span class="header-menu-btn__line header-menu-btn__line_first"></span><span class="header-menu-btn__line header-menu-btn__line_second"></span></span></div>
     </header>
+    <!--Header END -->
     <div class="page page-main">
-      <div class="container"><span class="title-h1 page__title page-main__title">We specialize in UX/UI, mobile & <br> web design, development<br class="d-xm-sm-block"> for the startups, individuals, brands and corporations.</span><a class="page-main__link link link_line text-bold" href="#">Take a look what we do</a></div>
+      <div class="container"><span class="title-h1 page__title page-main__title">We specialize<br class="d-xm-sm-block"> in UX/UI, mobile<br class="d-xm-sm-block"> & <br> web design, development<br class="d-xm-sm-block"> for the startups, individuals, brands and corporations.</span><a class="page-main__btn btn" href="#" data-text="Take a look what we do"><span class="btn__overlay"></span><span class="btn__text">Take a look what we do</span></a></div>
     </div>
     <script src="js/scripts.min.js"></script>
   </body>
