--- a/sivenkov.org/main.html
+++ b/sivenkov.org/main.html
@@ -36,7 +36,7 @@
     </header>
     <!--Header END -->
     <div class="page page-main">
-      <div class="container"><span class="title-h1 page__title page-main__title">We specialize<br class="d-xm-sm-block"> in UX/UI, mobile<br class="d-xm-sm-block"> & <br> web design, development<br class="d-xm-sm-block"> for the startups, individuals, brands and corporations.</span><a class="page-main__btn btn" href="#" data-text="Take a look what we do"><span class="btn__overlay"></span><span class="btn__text">Take a look what we do</span></a></div>
+      <div class="container"><span class="title-h1 page__title page-main__title">We specialize<br class="d-480-inline-block"> in UX/UI, mobile<br class="d-480-inline-block"> & <br> web design, development<br class="d-480-inline-block"> for the startups, individuals,<br class="d-480-inline-block"> brands and<br class="d-480-inline-block"> corporations.</span><a class="page-main__btn btn" href="#" data-text="Take a look what we do"><span class="btn__overlay"></span><span class="btn__text">Take a look what we do</span></a></div>
     </div>
     <script src="js/scripts.min.js"></script>
   </body>
