--- a/sivenkov.org/main.html
+++ b/sivenkov.org/main.html
@@ -32,37 +32,43 @@
     </section>
     <!--Header BEGIN-->
     <header class="header">
-      <div class="header__content"><a class="responsive-image header__wrap-logo" href="/"><img class="header__logo-img" src="img/logo-dark.svg" alt=""></a><span class="header-menu-btn header-menu-btn_desktop text-bold">Menu</span><span class="header-menu-btn header-menu-btn_mobile"><span class="header-menu-btn__line header-menu-btn__line_first"></span><span class="header-menu-btn__line header-menu-btn__line_second"></span></span></div>
+      <div class="header__content"><a class="responsive-image header__wrap-logo" href="/"><img class="header__logo-img" src="img/logo-dark.svg" alt=""></a><span class="header-menu-btn header-menu-btn_desktop"><span class="header-menu-btn__text text-bold">Menu</span></span><span class="header-menu-btn header-menu-btn_mobile"><span class="header-menu-btn__line header-menu-btn__line_first"></span><span class="header-menu-btn__line header-menu-btn__line_second"></span></span></div>
       <div class="menu">
-        <div class="menu-content">
-          <div class="menu-content__item menu-content__left">
-            <ul class="menu-list">
-              <li class="menu-list__item"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="Services"></span>Services</a></li>
-              <li class="menu-list__item"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="Works"></span>Works</a></li>
-              <li class="menu-list__item"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="About"></span>About</a></li>
-              <li class="menu-list__item"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="Contact"></span>Contact</a></li>
-              <li class="menu-list__item"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="Blog"></span>Blog</a></li>
-            </ul>
-          </div>
-          <div class="menu-content__item menu-content__right">
-            <div class="menu-info"><a class="menu-info__link text-bold" href="tel:+375291382469">+375 29 138-24-69</a><a class="menu-info__link text-bold" href="mailto:info@sivenkov.org">info@sivenkov.org</a><a class="menu-info__btn btn" href="#" data-text="Start a project"><span class="btn__overlay"></span><span class="btn__text">Start a project	</span></a></div>
-            <ul class="menu-social">
-              <li class="menu-social__item"><a class="menu-social__link" href="#"><svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M21.8792 0H8.12071C3.64288 0 0 3.64288 0 8.12071V21.8795C0 26.3571 3.64288 29.9999 8.12071 29.9999H21.8795C26.3571 29.9999 29.9999 26.3571 29.9999 21.8795V8.12071C29.9999 3.64288 26.3571 0 21.8792 0V0ZM15 23.2029C10.4768 23.2029 6.79709 19.5231 6.79709 15C6.79709 10.4768 10.4768 6.79709 15 6.79709C19.5231 6.79709 23.2029 10.4768 23.2029 15C23.2029 19.5231 19.5231 23.2029 15 23.2029ZM23.399 8.7316C22.0623 8.7316 20.9751 7.64441 20.9751 6.30774C20.9751 4.97108 22.0623 3.88366 23.399 3.88366C24.7357 3.88366 25.8231 4.97108 25.8231 6.30774C25.8231 7.64441 24.7357 8.7316 23.399 8.7316Z" fill="white"/>
-<path d="M14.9998 8.55591C11.4467 8.55591 8.55566 11.4467 8.55566 15.0001C8.55566 18.5532 11.4467 21.4442 14.9998 21.4442C18.5532 21.4442 21.444 18.5532 21.444 15.0001C21.444 11.4467 18.5532 8.55591 14.9998 8.55591Z" fill="white"/>
-<path d="M23.399 5.64233C23.0323 5.64233 22.7339 5.9408 22.7339 6.30746C22.7339 6.67413 23.0323 6.97259 23.399 6.97259C23.7659 6.97259 24.0644 6.67436 24.0644 6.30746C24.0644 5.94057 23.7659 5.64233 23.399 5.64233Z" fill="white"/>
-</svg></a></li>
-              <li class="menu-social__item"><a class="menu-social__link" href="#"><svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-<g>
-<path d="M0.529888 14.4644L7.44249 17.0444L10.1181 25.6491C10.2893 26.2002 10.9632 26.4039 11.4105 26.0382L15.2637 22.897C15.6676 22.5679 16.2429 22.5515 16.665 22.8579L23.6148 27.9036C24.0933 28.2514 24.7712 27.9892 24.8912 27.411L29.9823 2.92189C30.1133 2.29029 29.4927 1.76339 28.8913 1.99599L0.521788 12.9401C-0.178311 13.2101 -0.172211 14.2013 0.529888 14.4644ZM9.68689 15.671L23.1967 7.35029C23.4395 7.20119 23.6893 7.52949 23.4808 7.72289L12.3313 18.0869C11.9394 18.4517 11.6866 18.9399 11.615 19.4698L11.2352 22.2844C11.1849 22.6602 10.657 22.6975 10.5533 22.3338L9.09259 17.2013C8.92529 16.6159 9.16909 15.9906 9.68689 15.671Z" fill="white"/>
+        <div class="container">
+          <div class="menu-content">
+            <div class="menu-content__item menu-content__left">
+              <ul class="menu-list">
+                <li class="menu-list__item active"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="Services"></span>Services</a></li>
+                <li class="menu-list__item"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="Works"></span>Works</a></li>
+                <li class="menu-list__item"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="About"></span>About</a></li>
+                <li class="menu-list__item"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="Contact"></span>Contact</a></li>
+                <li class="menu-list__item"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="Blog"></span>Blog</a></li>
+              </ul>
+            </div>
+            <div class="menu-content__item menu-content__right">
+              <div class="menu-info"><a class="menu-info__link text-bold" href="tel:+375291382469"><span class="menu-info__overlay" data-text="+375 29 138-24-69"></span>+375 29 138-24-69</a><a class="menu-info__link text-bold" href="mailto:info@sivenkov.org"> <span class="menu-info__overlay" data-text="info@sivenkov.org"></span>info@sivenkov.org</a><a class="menu-info__btn btn" href="#" data-text="Start a project"><span class="btn__overlay"></span><span class="btn__text">Start a project	</span></a></div>
+              <ul class="menu-social">
+                <li class="menu-social__item"><a class="menu-social__link" href="#"><svg class="menu-social__svg menu-social__svg_inst" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+<path class="menu-social__svg_inst-1" d="m512 138.597656v234.804688c0 76.421875-62.175781 138.597656-138.597656 138.597656h-234.804688c-76.421875 0-138.597656-62.175781-138.597656-138.597656v-234.804688c0-76.421875 62.175781-138.597656 138.597656-138.597656h234.804688c76.421875 0 138.597656 62.175781 138.597656 138.597656zm0 0" fill="#ff5e95"/>
+<path class="menu-social__svg_inst-2" d="m512 138.597656v234.804688c0 76.421875-62.175781 138.597656-138.597656 138.597656h-117.261719v-512h117.261719c76.421875 0 138.597656 62.175781 138.597656 138.597656zm0 0" fill="#ff3980"/>
+<path class="menu-social__svg_inst-3" d="m256 116.003906c-77.191406 0-139.996094 62.804688-139.996094 139.996094s62.804688 139.996094 139.996094 139.996094 139.996094-62.804688 139.996094-139.996094-62.804688-139.996094-139.996094-139.996094zm0 249.976563c-60.644531 0-109.980469-49.335938-109.980469-109.980469s49.335938-109.980469 109.980469-109.980469 109.980469 49.335938 109.980469 109.980469-49.335938 109.980469-109.980469 109.980469zm0 0" fill="#fff"/>
+<g fill="#96fff6">
+<path class="menu-social__svg_inst-4" d="m399.34375 66.285156c-22.808594 0-41.367188 18.554688-41.367188 41.367188s18.558594 41.371094 41.367188 41.371094c22.8125 0 41.371094-18.558594 41.371094-41.371094s-18.558594-41.367188-41.371094-41.367188zm0 0"/>
+<path class="menu-social__svg_inst-5" d="m395.996094 256c0 77.191406-62.804688 139.996094-139.996094 139.996094v-30.015625c60.644531 0 109.980469-49.335938 109.980469-109.980469s-49.335938-109.980469-109.980469-109.980469v-30.015625c77.191406 0 139.996094 62.804688 139.996094 139.996094zm0 0"/>
 </g>
 </svg></a></li>
-              <li class="menu-social__item"><a class="menu-social__link" href="#"><svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li class="menu-social__item"><a class="menu-social__link" href="#"><svg class="menu-social__svg menu-social__svg_twitter" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="512" height="512">
 <g>
-<path d="M11.0261 5.81026C11.0261 6.56627 11.0261 9.94066 11.0261 9.94066H8V14.9913H11.0261V30.0001H17.2422V14.9917H21.4136C21.4136 14.9917 21.8042 12.57 21.9936 9.92203C21.4507 9.92203 17.2657 9.92203 17.2657 9.92203C17.2657 9.92203 17.2657 6.98372 17.2657 6.46869C17.2657 5.95255 17.9435 5.25827 18.6134 5.25827C19.282 5.25827 20.6931 5.25827 22.0002 5.25827C22.0002 4.57061 22.0002 2.19462 22.0002 0.000244159C20.2553 0.000244159 18.2703 0.000244159 17.3953 0.000244159C10.8724 -0.000104586 11.0261 5.05558 11.0261 5.81026Z" fill="white"/>
+<path class="menu-social__svg_twitter-1" d="M276.7,392.555l-100.201,99.901c-2.999,1.8-6.899,6.301-15,3.9c-4.199-1.5-9.3-6.301-10.199-11.7   v-0.3l-28.801-172.2l23.401-17.699c3.03,1.777,60.854,35.684,57.299,33.6l73.5,43.2C282.4,377.256,282.4,386.556,276.7,392.555z"/>
+<path class="menu-social__svg_twitter-2" d="M511.708,32.964L420.7,484.956c-0.9,4.8-4.5,9-9.3,10.8c-1.8,0.9-3.6,1.2-5.4,1.2   c-3,0-6-0.9-8.7-2.7c-3.018-2.156-224.061-160.044-210-150c-133.84-66.3-64.027-31.453-178.9-88.8c-5.4-2.7-8.4-8.1-8.4-13.8   c0.3-6,3.6-11.1,9-13.5L491.008,16.164c5.1-2.1,11.1-1.5,15.3,2.1c0.6,0.6,1.5,1.5,2.1,2.1   C511.408,23.964,512.608,28.464,511.708,32.964z"/>
+<path class="menu-social__svg_twitter-3" d="M508.408,20.364L203.2,328.056l-15.899,16.199l-25.801,152.1c-4.199-1.5-9.3-6.301-10.199-11.7v-0.3   l-28.801-172.2l23.401-17.699L508.408,20.364z"/>
 </g>
 </svg></a></li>
-            </ul>
+                <li class="menu-social__item"><a class="menu-social__link" href="#"><svg class="menu-social__svg menu-social__svg_facebook" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+<path class="menu-social__svg_facebook-1"  d="M134.941,272.691h56.123v231.051c0,4.562,3.696,8.258,8.258,8.258h95.159 c4.562,0,8.258-3.696,8.258-8.258V273.78h64.519c4.195,0,7.725-3.148,8.204-7.315l9.799-85.061c0.269-2.34-0.472-4.684-2.038-6.44 c-1.567-1.757-3.81-2.763-6.164-2.763h-74.316V118.88c0-16.073,8.654-24.224,25.726-24.224c2.433,0,48.59,0,48.59,0 c4.562,0,8.258-3.698,8.258-8.258V8.319c0-4.562-3.696-8.258-8.258-8.258h-66.965C309.622,0.038,308.573,0,307.027,0 c-11.619,0-52.006,2.281-83.909,31.63c-35.348,32.524-30.434,71.465-29.26,78.217v62.352h-58.918c-4.562,0-8.258,3.696-8.258,8.258 v83.975C126.683,268.993,130.379,272.691,134.941,272.691z"/>
+</svg></a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
