--- a/sivenkov.org/main.html
+++ b/sivenkov.org/main.html
@@ -36,7 +36,7 @@
       <div class="menu">
         <div class="container">
           <div class="menu-content">
-            <div class="menu-content__item menu-content__left">
+            <nav class="menu-content__item menu-content__left">
               <ul class="menu-list">
                 <li class="menu-list__item active"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="Services"></span>Services</a></li>
                 <li class="menu-list__item"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="Works"></span>Works</a></li>
@@ -44,7 +44,7 @@
                 <li class="menu-list__item"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="Contact"></span>Contact</a></li>
                 <li class="menu-list__item"><a class="menu-list__link" href="#"><span class="menu-list__overlay" data-text="Blog"></span>Blog</a></li>
               </ul>
-            </div>
+            </nav>
             <div class="menu-content__item menu-content__right">
               <div class="menu-info"><a class="menu-info__link text-bold" href="tel:+375291382469"><span class="menu-info__overlay" data-text="+375 29 138-24-69"></span>+375 29 138-24-69</a><a class="menu-info__link text-bold" href="mailto:info@sivenkov.org"> <span class="menu-info__overlay" data-text="info@sivenkov.org"></span>info@sivenkov.org</a><a class="menu-info__btn btn" href="#" data-text="Start a project"><span class="btn__overlay"></span><span class="btn__text">Start a project	</span></a></div>
               <ul class="menu-social">
