--- a/sivenkov.org/main.html
+++ b/sivenkov.org/main.html
@@ -32,7 +32,7 @@
     </section>
     <!--Header BEGIN-->
     <header class="header">
-      <div class="header__content"><a class="responsive-image header__wrap-logo" href="/"><img class="header__logo-img" src="img/logo-dark.svg" alt=""></a><span class="header-menu-btn header-menu-btn_desktop"><span class="header-menu-btn__text text-bold">Menu</span></span><span class="header-menu-btn header-menu-btn_mobile"><span class="header-menu-btn__line header-menu-btn__line_first"></span><span class="header-menu-btn__line header-menu-btn__line_second"></span></span></div>
+      <div class="header__content"><a class="responsive-image header__wrap-logo" href="/"><img class="header__logo-img" src="img/logo-dark.svg" alt=""></a><span class="header-menu-btn header-menu-btn_desktop"><span class="header-menu-btn__text text-bold" data-text="Menu">Menu</span></span><span class="header-menu-btn header-menu-btn_mobile"><span class="header-menu-btn__line header-menu-btn__line_first"></span><span class="header-menu-btn__line header-menu-btn__line_second"></span></span></div>
       <div class="menu">
         <div class="container">
           <div class="menu-content">
