--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -59,7 +59,6 @@
               <li class="our-plus__item text-semibold title-h3 text-gray">Функционально</li>
             </ul>
             <p class="our-plus__bottom-text default-text text-gray">Закажите продающий сайт для решения задач вашего бизнеса</p><a class="our-plus__btn btn btn-modal" href="#" data-text="Заказать консультацию" data-modal-key="callback"><span class="btn__overlay"></span><span class="btn__text">Заказать консультацию</span></a>
-            <div class="our-plus__icon-scroll responsive-image"><img src="img/mouse-scroll.svg" alt=""></div>
           </div>
         </div>
       </section>
@@ -116,14 +115,14 @@
               <div class="portfolio__item responsive-image"><img class="portfolio__img" src="img/portfolio-2.jpg"></div>
             </li>
           </ul>
-          <div class="portfolio__wrap-btn"><span class="portfolio__btn btn btn_pink btn-modal" data-text="Показать больше"><span class="btn__overlay"></span><span class="btn__text">Показать больше</span></span></div>
+          <div class="portfolio__wrap-btn"><span class="portfolio__btn btn btn-modal" data-text="Показать больше"><span class="btn__overlay"></span><span class="btn__text">Показать больше</span></span></div>
         </div>
       </section>
       <!--Portfolio END-->
       <!--Studio BEGIN-->
       <section class="studio section">
         <div class="container"><span class="studio__title title-h1 page__title">Cтудия</span>
-          <p class="studio__text default-text text text-gray">Cивенков это команда молодых и амбициозных специалистов, которые нашли друг друга блягодаря своему стремлению к созданию совершенного продукта. Для нас не существует нерешаемых задач. Всю свою страсть, любовь и талант к работе мы демонстрируем в наших проектах. Непрекращающееся обучение и развитие, совместная работа команды с клиентам и следование срокам - это то, чем мы по праву гордимся.</p>
+          <p class="studio__text default-text text text-gray">Cивенков это команда молодых и амбициозных специалистов, которые нашли друг друга<br> блягодаря своему стремлению к созданию совершенного продукта. Для нас не существует нерешаемых задач. Всю свою страсть, любовь и талант к работе мы демонстрируем в наших проектах. Непрекращающееся обучение и развитие, совместная работа команды с клиентам и следование срокам - это то, чем мы по праву гордимся.</p>
         </div>
       </section>
       <!--Studio END-->
@@ -202,21 +201,21 @@
         </div>
         <div class="footer-bottom">
           <div class="footer-bottom__item"></div>
-          <ul class="footer-bottom__item social">
-            <li class="social__item"><a class="social__link" href="#"><svg class="social__svg social__svg_inst" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path class="social__svg_inst-1" d="M21.8792 0H8.12071C3.64288 0 0 3.64288 0 8.12071V21.8795C0 26.3571 3.64288 29.9999 8.12071 29.9999H21.8795C26.3571 29.9999 29.9999 26.3571 29.9999 21.8795V8.12071C29.9999 3.64288 26.3571 0 21.8792 0V0ZM15 23.2029C10.4768 23.2029 6.79709 19.5231 6.79709 15C6.79709 10.4768 10.4768 6.79709 15 6.79709C19.5231 6.79709 23.2029 10.4768 23.2029 15C23.2029 19.5231 19.5231 23.2029 15 23.2029ZM23.399 8.7316C22.0623 8.7316 20.9751 7.64441 20.9751 6.30774C20.9751 4.97108 22.0623 3.88366 23.399 3.88366C24.7357 3.88366 25.8231 4.97108 25.8231 6.30774C25.8231 7.64441 24.7357 8.7316 23.399 8.7316Z" fill="white"/>
-<path class="social__svg_inst-2" d="M14.9998 8.55591C11.4467 8.55591 8.55566 11.4467 8.55566 15.0001C8.55566 18.5532 11.4467 21.4442 14.9998 21.4442C18.5532 21.4442 21.444 18.5532 21.444 15.0001C21.444 11.4467 18.5532 8.55591 14.9998 8.55591Z" fill="white"/>
-<path class="social__svg_inst-3" d="M23.399 5.64233C23.0323 5.64233 22.7339 5.9408 22.7339 6.30746C22.7339 6.67413 23.0323 6.97259 23.399 6.97259C23.7659 6.97259 24.0644 6.67436 24.0644 6.30746C24.0644 5.94057 23.7659 5.64233 23.399 5.64233Z" fill="white"/>
+          <ul class="footer-bottom__item footer-social">
+            <li class="footer-social__item"><a class="footer-social__link" href="#"><svg class="footer-social__svg footer-social__svg_inst" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path class="footer-social__svg_inst-1" d="M21.8792 0H8.12071C3.64288 0 0 3.64288 0 8.12071V21.8795C0 26.3571 3.64288 29.9999 8.12071 29.9999H21.8795C26.3571 29.9999 29.9999 26.3571 29.9999 21.8795V8.12071C29.9999 3.64288 26.3571 0 21.8792 0V0ZM15 23.2029C10.4768 23.2029 6.79709 19.5231 6.79709 15C6.79709 10.4768 10.4768 6.79709 15 6.79709C19.5231 6.79709 23.2029 10.4768 23.2029 15C23.2029 19.5231 19.5231 23.2029 15 23.2029ZM23.399 8.7316C22.0623 8.7316 20.9751 7.64441 20.9751 6.30774C20.9751 4.97108 22.0623 3.88366 23.399 3.88366C24.7357 3.88366 25.8231 4.97108 25.8231 6.30774C25.8231 7.64441 24.7357 8.7316 23.399 8.7316Z" fill="white"/>
+<path class="footer-social__svg_inst-2" d="M14.9998 8.55591C11.4467 8.55591 8.55566 11.4467 8.55566 15.0001C8.55566 18.5532 11.4467 21.4442 14.9998 21.4442C18.5532 21.4442 21.444 18.5532 21.444 15.0001C21.444 11.4467 18.5532 8.55591 14.9998 8.55591Z" fill="white"/>
+<path class="footer-social__svg_inst-3" d="M23.399 5.64233C23.0323 5.64233 22.7339 5.9408 22.7339 6.30746C22.7339 6.67413 23.0323 6.97259 23.399 6.97259C23.7659 6.97259 24.0644 6.67436 24.0644 6.30746C24.0644 5.94057 23.7659 5.64233 23.399 5.64233Z" fill="white"/>
 </svg></a></li>
-            <li class="social__item"><a class="social__link" href="#"><svg class="social__svg social__svg_twitter" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+            <li class="footer-social__item"><a class="footer-social__link" href="#"><svg class="footer-social__svg footer-social__svg_twitter" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
 <g>
-<path class="social__svg_twitter-1" d="M276.7,392.555l-100.201,99.901c-2.999,1.8-6.899,6.301-15,3.9c-4.199-1.5-9.3-6.301-10.199-11.7   v-0.3l-28.801-172.2l23.401-17.699c3.03,1.777,60.854,35.684,57.299,33.6l73.5,43.2C282.4,377.256,282.4,386.556,276.7,392.555z"/>
-<path class="social__svg_twitter-2" d="M511.708,32.964L420.7,484.956c-0.9,4.8-4.5,9-9.3,10.8c-1.8,0.9-3.6,1.2-5.4,1.2   c-3,0-6-0.9-8.7-2.7c-3.018-2.156-224.061-160.044-210-150c-133.84-66.3-64.027-31.453-178.9-88.8c-5.4-2.7-8.4-8.1-8.4-13.8   c0.3-6,3.6-11.1,9-13.5L491.008,16.164c5.1-2.1,11.1-1.5,15.3,2.1c0.6,0.6,1.5,1.5,2.1,2.1   C511.408,23.964,512.608,28.464,511.708,32.964z"/>
-<path class="social__svg_twitter-3" d="M508.408,20.364L203.2,328.056l-15.899,16.199l-25.801,152.1c-4.199-1.5-9.3-6.301-10.199-11.7v-0.3   l-28.801-172.2l23.401-17.699L508.408,20.364z"/>
+<path class="footer-social__svg_twitter-1" d="M276.7,392.555l-100.201,99.901c-2.999,1.8-6.899,6.301-15,3.9c-4.199-1.5-9.3-6.301-10.199-11.7   v-0.3l-28.801-172.2l23.401-17.699c3.03,1.777,60.854,35.684,57.299,33.6l73.5,43.2C282.4,377.256,282.4,386.556,276.7,392.555z"/>
+<path class="footer-social__svg_twitter-2" d="M511.708,32.964L420.7,484.956c-0.9,4.8-4.5,9-9.3,10.8c-1.8,0.9-3.6,1.2-5.4,1.2   c-3,0-6-0.9-8.7-2.7c-3.018-2.156-224.061-160.044-210-150c-133.84-66.3-64.027-31.453-178.9-88.8c-5.4-2.7-8.4-8.1-8.4-13.8   c0.3-6,3.6-11.1,9-13.5L491.008,16.164c5.1-2.1,11.1-1.5,15.3,2.1c0.6,0.6,1.5,1.5,2.1,2.1   C511.408,23.964,512.608,28.464,511.708,32.964z"/>
+<path class="footer-social__svg_twitter-3" d="M508.408,20.364L203.2,328.056l-15.899,16.199l-25.801,152.1c-4.199-1.5-9.3-6.301-10.199-11.7v-0.3   l-28.801-172.2l23.401-17.699L508.408,20.364z"/>
 </g>
 </svg></a></li>
-            <li class="social__item"><a class="social__link" href="#"><svg class="social__svg social__svg_facebook" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
-<path class="social__svg_facebook-1"  d="M134.941,272.691h56.123v231.051c0,4.562,3.696,8.258,8.258,8.258h95.159 c4.562,0,8.258-3.696,8.258-8.258V273.78h64.519c4.195,0,7.725-3.148,8.204-7.315l9.799-85.061c0.269-2.34-0.472-4.684-2.038-6.44 c-1.567-1.757-3.81-2.763-6.164-2.763h-74.316V118.88c0-16.073,8.654-24.224,25.726-24.224c2.433,0,48.59,0,48.59,0 c4.562,0,8.258-3.698,8.258-8.258V8.319c0-4.562-3.696-8.258-8.258-8.258h-66.965C309.622,0.038,308.573,0,307.027,0 c-11.619,0-52.006,2.281-83.909,31.63c-35.348,32.524-30.434,71.465-29.26,78.217v62.352h-58.918c-4.562,0-8.258,3.696-8.258,8.258 v83.975C126.683,268.993,130.379,272.691,134.941,272.691z"/>
+            <li class="footer-social__item"><a class="footer-social__link" href="#"><svg class="footer-social__svg footer-social__svg_facebook" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+<path class="footer-social__svg_facebook-1"  d="M134.941,272.691h56.123v231.051c0,4.562,3.696,8.258,8.258,8.258h95.159 c4.562,0,8.258-3.696,8.258-8.258V273.78h64.519c4.195,0,7.725-3.148,8.204-7.315l9.799-85.061c0.269-2.34-0.472-4.684-2.038-6.44 c-1.567-1.757-3.81-2.763-6.164-2.763h-74.316V118.88c0-16.073,8.654-24.224,25.726-24.224c2.433,0,48.59,0,48.59,0 c4.562,0,8.258-3.698,8.258-8.258V8.319c0-4.562-3.696-8.258-8.258-8.258h-66.965C309.622,0.038,308.573,0,307.027,0 c-11.619,0-52.006,2.281-83.909,31.63c-35.348,32.524-30.434,71.465-29.26,78.217v62.352h-58.918c-4.562,0-8.258,3.696-8.258,8.258 v83.975C126.683,268.993,130.379,272.691,134.941,272.691z"/>
 </svg></a></li>
           </ul>
           <div class="footer-bottom__item footer-info">
