--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -122,7 +122,7 @@
       <!--Studio BEGIN-->
       <section class="studio section">
         <div class="container"><span class="studio__title title-h1 page__title">Cтудия</span>
-          <p class="studio__text default-text text text-gray">Cивенков это команда молодых и амбициозных специалистов, которые нашли друг друга<br> блягодаря своему стремлению к созданию совершенного продукта. Для нас не существует нерешаемых задач. Всю свою страсть, любовь и талант к работе мы демонстрируем в наших проектах. Непрекращающееся обучение и развитие, совместная работа команды с клиентам и следование срокам - это то, чем мы по праву гордимся.</p>
+          <p class="studio__text default-text text text-gray">Cивенков это команда молодых и амбициозных специалистов, которые нашли друг друга<br> блягодаря своему стремлению к созданию совершенного продукта. Для нас не существует<br> нерешаемых задач. Всю свою страсть, любовь и талант к работе мы демонстрируем в наших<br> проектах. Непрекращающееся обучение и развитие, совместная работа команды с клиентам<br> и следование срокам - это то, чем мы по праву гордимся.</p>
         </div>
       </section>
       <!--Studio END-->
