--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -52,7 +52,7 @@
       <!--Our plus BEGIN-->
       <section class="our-plus section section_top-0">
         <div class="container">
-          <div class="our-plus__content"><span class="our-plus__title title-h1 page__title">Мы создаём сайты с любовью </span>
+          <div class="our-plus__content"><span class="our-plus__title title-h1 page__title">Мы создаём сайты с любовью<span class="our-plus__wrap-love"><img class="our-plus__love" src="img/love.svg" alt=""></span></span>
             <ul class="our-plus__list">
               <li class="our-plus__item text-semibold title-h3 text-gray">Уникально</li>
               <li class="our-plus__item text-semibold title-h3 text-gray">Качественно</li>
@@ -101,8 +101,8 @@
 </path>
 <defs>
 <linearGradient id="paint0_linear" x1="357" y1="76" x2="55.5" y2="350.5" gradientUnits="userSpaceOnUse">
-<stop stop-color="#F05596"/>
-<stop offset="1" stop-color="#17A5F4"/>
+<stop stop-color="#17A5F4"/>
+<stop offset="1" stop-color="#F05596"/>
 </linearGradient>
 </defs>
 </svg>
