--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -52,7 +52,7 @@
         </form>
       </div>
     </div>
-    <div class="popup popup-success">
+    <div class="popup popup-success active">
       <div class="popup__content"><span class="popup__close"></span><span class="popup__title popup-success__title text-semibold title-h3">Благодарим<br> за вашу заявку!</span>
         <p class="popup-success__text text-gray">Мы свяжемся с вами в ближайшее время</p>
       </div>
@@ -76,7 +76,7 @@
       <!--Our plus BEGIN-->
       <section class="our-plus section section_top-0">
         <div class="container">
-          <div class="our-plus__content"><span class="our-plus__title title-h1 page__title"><span>Мы создаём сайты с любовью</span><span class="our-plus__wrap-love"><img class="our-plus__love" src="img/love.svg" alt=""></span></span>
+          <div class="our-plus__content"><span class="our-plus__title title-h1 page__title"><span>Мы создаём<br> сайты с любовью</span><span class="our-plus__wrap-love"><img class="our-plus__love" src="img/love.svg" alt=""></span></span>
             <ul class="our-plus__list">
               <li class="our-plus__item text-semibold title-h3 text-gray">Уникально</li>
               <li class="our-plus__item text-semibold title-h3 text-gray">Качественно</li>
@@ -107,7 +107,7 @@
               <p class="services-list__text text-gray default-text">Аналитика, визуальный и пользовательский дизайн, Анимация интерфейсов,  фирменный<br> стиль, лого, банеры.</p>
             </li>
             <li class="services-list__item"><span class="services-list__title title-h3 text-accent text-semibold">Веб Разработка</span>
-              <p class="services-list__text text-gray default-text">Имиджевые сайты, Интернет-магазины, Сайт-каталог, Лендинг страницы, Разработка и<br> интеграфия СRM cистем.</p>
+              <p class="services-list__text text-gray default-text">Имиджевые сайты,<br class="d-sm-inline-block"> Интернет-магазины, Сайт-каталог, Лендинг страницы, Разработка и<br> интеграфия СRM cистем.</p>
             </li>
             <li class="services-list__item"><span class="services-list__title title-h3 text-accent text-semibold">Техподдержка</span>
               <p class="services-list__text text-gray default-text">Системное администрирование, Копирайтинг, Контент-менеджмент.</p>
@@ -146,7 +146,7 @@
       <!--Studio BEGIN-->
       <section class="studio section">
         <div class="container"><span class="studio__title title-h1 page__title">Cтудия</span>
-          <p class="studio__text default-text text text-gray">Cивенков это команда молодых и амбициозных специалистов, которые нашли друг друга<br> блягодаря своему стремлению к созданию совершенного продукта. Для нас не существует<br> нерешаемых задач. Всю свою страсть, любовь и талант к работе мы демонстрируем в наших<br> проектах. Непрекращающееся обучение и развитие, совместная работа команды с клиентам<br> и следование срокам - это то, чем мы по праву гордимся.</p>
+          <p class="studio__text default-text text text-gray">Cивенков это команда молодых<br class="d-375-400-inline-block"> и амбициозных специалистов,<br class="d-375-400-inline-block"> которые нашли друг друга<br> блягодаря своему стремлению<br class="d-375-400-inline-block"> к созданию совершенного<br class="d-375-400-inline-block"> продукта. Для нас не существует<br> нерешаемых задач. Всю свою<br class="d-375-400-inline-block"> страсть, любовь и талант к работе<br class="d-375-400-inline-block"> мы демонстрируем в наших<br> проектах.<br class="d-375-400-inline-block"> Непрекращающееся обучение и<br class="d-375-400-inline-block"> развитие, совместная работа<br class="d-375-400-inline-block"> команды с клиентам<br> и следование<br class="d-375-400-inline-block"> срокам - это то, чем мы по праву<br class="d-375-400-inline-block"> гордимся.</p>
         </div>
       </section>
       <!--Studio END-->
@@ -164,7 +164,7 @@
 </defs>
 </svg>
         </div>
-        <div class="container"><span class="feedback__title title-h1 page__title">Узнайте, что мы можем предложить вашему бизнесу</span>
+        <div class="container"><span class="feedback__title title-h1 page__title">Узнайте,<br class="d-375-400-inline-block"> что мы можем предложить вашему бизнесу</span>
           <div class="feedback__wrap-form form-wrap">
             <div class="prelaoder-mini responsive-image"><img src="img/preloader-mini.svg" alt=""></div>
             <form class="feedback__form form">
@@ -194,7 +194,7 @@
                 </div>
               </div>
             </form>
-            <button class="form__btn btn" data-text="Отправить заявку" data-modal-key="callback"><span class="btn__overlay"></span><span class="btn__text">Отправить заявку</span></button>
+            <button class="feedback__btn form__btn btn" data-text="Отправить заявку" data-modal-key="callback"><span class="btn__overlay"></span><span class="btn__text">Отправить заявку</span></button>
             <p class="feedback__success-message default-text">Благодарим за вашу заявку! Мы свяжемся<br> с вами в ближайшее время.</p>
           </div>
         </div>
