--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -52,7 +52,7 @@
         </form>
       </div>
     </div>
-    <div class="popup popup-success active">
+    <div class="popup popup-success">
       <div class="popup__content"><span class="popup__close"></span><span class="popup__title popup-success__title text-semibold title-h3">Благодарим<br> за вашу заявку!</span>
         <p class="popup-success__text text-gray">Мы свяжемся с вами в ближайшее время</p>
       </div>
